--- a/src/pages/authorization.html
+++ b/src/pages/authorization.html
@@ -6,9 +6,11 @@
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Опросы</title>
-	<link rel="stylesheet" href="../styles/main.scss">
+	<link rel="stylesheet" href="../styles/criticalcss.scss">
 </head>
 <body>
+<script async src="../scripts/criticaljs.js"></script>
+
 <main>
 	<div class="container">
 		<!--registration-->
@@ -68,13 +70,14 @@
 			<form action="#">
 				<div class="form-auth__row mt-indent-45">
 					<input type="text" class="input gray input_big" placeholder="E-mail">
-						<button class="btn  btn-red btn-md text-white text-uppercase">Войти</button>
+					<button class="btn  btn-red btn-md text-white text-uppercase">Войти</button>
 				</div>
 			</form>
 		</div>
 
 	</div>
 </main>
-<script src="../scripts/main.js"></script>
+<link rel="stylesheet" href="../styles/main.scss">
+<script async src="../scripts/main.js"></script>
 </body>
 </html>
