--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -6,9 +6,10 @@
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Main</title>
-	<link rel="stylesheet" href="../styles/main.scss">
+	<link rel="stylesheet" href="../styles/criticalcss.scss">
 </head>
 <body>
+<script async src="../scripts/criticaljs.js"></script>
 <div class="pt-md-full">
 
 	<header class="header fixed-md-top">
@@ -432,6 +433,7 @@
 		</div>
 	</header>
 </div>
-<script src="../scripts/main.js"></script>
+<link rel="stylesheet" href="../styles/main.scss">
+<script async src="../scripts/main.js"></script>
 </body>
 </html>
