--- a/src/pages/profile-message.html
+++ b/src/pages/profile-message.html
@@ -6,9 +6,10 @@
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Опросы</title>
-	<link rel="stylesheet" href="../styles/main.scss">
+	<link rel="stylesheet" href="../styles/criticalcss.scss">
 </head>
 <body>
+<script async src="../scripts/criticaljs.js"></script>
 <main class="main pt-0 pt-md-4" style="overflow-x: hidden">
 	<div class="container-fluid container-md">
 		<div class="row">
@@ -258,6 +259,7 @@
 		</div>
 	</div>
 </main>
-<script src="../scripts/main.js"></script>
+<link rel="stylesheet" href="../styles/main.scss">
+<script async src="../scripts/main.js"></script>
 </body>
 </html>
