--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -499,8 +499,6 @@
 								<div class="post-preview__post-info post-info">
 									<div class="post-info__date">
 										<svg-icon type="calendar" class="icon" height="14" width="12" viewBox="0 0 12 14"></svg-icon>
-
-
 										<span class="ml-1">17.01.2020</span>
 									</div>
 									<span class="post-info__time">13:20</span>
